ref: enable multimodule
In order to improve the development experience some functionality like
database seeding needs to be provided. This will be provided by a CLI
tool which will form part of the project. Therefore Maven has been
refactored into a multimodule setup.